Nearly code works, just delete

--- a/views/login.mustache
+++ b/views/login.mustache
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Login to Gabble</h1> 
+    <h1>Login to Grumble</h1> 
     <nav>
     </nav>
   </header>
@@ -28,5 +28,11 @@
   		<button type = "submit">Login</button>
   	</form>
   	</div>
+  <div class = "container">
+    <form action = "/register" method = "get">
+      <span>New to Grumble? Register to get your grumbles heard..</span>
+      <button type = "submit">Register</button>
+    </form>
+  </div>
 </body>
 </html>
