--- a/views/register.mustache
+++ b/views/register.mustache
@@ -14,6 +14,10 @@
     <h1>Register Your Profile with Gabble</h1>
     {{/id}}
     <nav>
+      <a href = "/login">Login</a>
+      <a href = "/register">Create Account</a>
+      <a href = "/user/messenger">Messages</a>
+      <a href = "/user/index">Gabbs</a>
     </nav>
   </header>
 	<div class = "container">
