--- a/views/gabbs.mustache
+++ b/views/gabbs.mustache
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Gabbs</title>
   <link rel="stylesheet" href="/main.css" />
 </head>
 <body>
@@ -11,17 +11,34 @@
     <nav>
     <a href = "/login">Login</a>
     <a href = "/register">Create Account</a>
-    <a href = "/messenger">Messages</a>
-    <a href = "/gabbs">Gabbs</a>
+    <a href = "/user/messenger">Messages</a>
+    <a href = "/user/index">Gabbs</a>
     </nav>
   </header>
-	<div class = "container">
-  	<h3>Current Peeps</h3>
-  <div><a href="/add">Add Student</a></div>
-  <ul>
-    {{#peeps}}
-      <li><a href="/edit/{{id}}">{{fname}} {{lname}} AKA {{nickname}} can be reached at {{email}}</a></li>
-    {{/peeps}}
-  </ul>
+  <main>
+    <h3>Gabbers Gabbing About Gabbs</h3>
+	   <div class = "container">
+  	   <div class = "gabbContainer">
+        <p>{{name}}: {{gabb}}<p>
+        <span>{{timestamp}}</span>
+        {{#likes}}
+        <a href = ""><span>{{likes}}</a>
+        {{/likes}}
+        {{^likes}}
+        <span>No likes yet.</span>
+       </div>
+       <div class = "likeContainer">
+        <form action = "/addlike" method = "post">
+        <button type = "submit">Like</button>
+        </form>
+        </br>
+        {{#user}}
+        <form action = "/deletePost" method = "delete">
+        <button type = "submit">Delete</button>
+        </form>
+        {{/user}}
+       </div>
+      </div>
+  </main> 
 </body>
 </html>
