--- a/views/index.mustache
+++ b/views/index.mustache
@@ -2,26 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Grumble Index</title>
   <link rel="stylesheet" href="/main.css" />
 </head>
 <body>
   <header>
-    <h1>Gabble</h1> 
+    <h1>Grumble</h1> 
     <nav>
     <a href = "/login">Login</a>
     <a href = "/register">Create Account</a>
-    <a href = "/messenger">Messages</a>
-    <a href = "/gabbs">Gabbs</a>
+    <a href = "/user/messenger">Messages</a>
+    <a href = "/user/index">Gabbs</a>
     </nav>
   </header>
-	<div class = "container">
-  	<h3>Current Peeps</h3>
-  <div><a href="/add">Add Student</a></div>
-  <ul>
-    {{#peeps}}
-      <li><a href="/edit/{{id}}">{{fname}} {{lname}} AKA {{nickname}} can be reached at {{email}}</a></li>
-    {{/peeps}}
-  </ul>
+  <main>
+    <h3>Grumblers Grumbling with Many Grumbles...</h3>
+    {{#data}}
+     <div class = "container">
+       <div class = "gabbContainer">
+        <p>{{fname}}: {{message}}<p>
+        <span>{{datetime}}</span>
+        {{#likecount}}
+        <a href = ""><span>{{likecount}} likes</a>
+        {{/likecount}}
+        {{^likecount}}
+        <span>No likes yet.</span>
+        {{/likecount}}
+       </div>
+       <div class = "likeContainer">
+        <form action = "/user/addlike" method = "post">
+        <input type = "hidden" value = "{{userid}}" name = "userid"/>
+        <input type = "hidden" value = "{{id_grumble}}" name = "grumbId"/>
+        <button type = "submit">Like</button>
+        </form>
+        </br>
+        {{#deletebut}}
+        <form action = "/deletePost" method = "delete">
+        <button type = "submit">Delete</button>
+        </form>
+        {{/deletebut}}
+       </div>
+      </div>
+    {{/data}}  
+  </main> 
 </body>
 </html>
