--- a/views/login.mustache
+++ b/views/login.mustache
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="/main.css" />
+  <link rel="stylesheet" href="/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -11,6 +12,10 @@
     <nav>
     </nav>
   </header>
+  <main>
+  <div class = "images">
+    <img src = "./images/Grump.jpg"/>
+  </div>
 	<div class = "container">
   	<form action = "/login" method = "post">
   		<label>Username</label>
@@ -29,10 +34,12 @@
   	</form>
   	</div>
   <div class = "container">
+    </br>
     <form action = "/register" method = "get">
       <span>New to Grumble? Register to get your grumbles heard..</span>
       <button type = "submit">Register</button>
     </form>
   </div>
+  </main>
 </body>
 </html>
