--- a/views/likers.mustache
+++ b/views/likers.mustache
@@ -1,17 +1,21 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Gabbs</title>
   <link rel="stylesheet" href="/main.css" />
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <h1>Grumble</h1> 
+  <header class = "head2">
+    <h1>Grumble :-|</h1> 
     <nav>
-    <a href = "/login">Login</a>
+    <p>Logged in as {{user}},</p><a href = "/login">Logout</a>
+    </br>
     <a href = "/register">Create Account</a>
+    </br>
     <a href = "/user/messenger">Messages</a>
+    </br>
     <a href = "/user/index">Grumbs</a>
     </nav>
   </header>
