--- a/static/main.css
+++ b/static/main.css
@@ -2,7 +2,93 @@ html {box-sizing:border-box;}
 *, *:before, *:after {box-sizing:inherit;}
 
 
+body {
+	font-family: 'Permanent Marker', cursive;	
+}
+
+a {
+	color: black;
+}
+
+a:hover {
+	color: red;
+}
+
+
 h1 {
 	font-family: 'Permanent Marker', cursive;
 	font-size: 36px;
+}
+
+
+header {
+	width: 800px;
+	height: 225px;
+	margin: 0 auto;
+	background-image: url("/grump3.jpg");
+	background-size: cover;
+	background-position: center;
+	padding: 15px;
+
+}
+
+nav {
+	width: 275px;
+}
+
+
+main {
+	width: 800px;
+	margin: 0 auto;
+}
+
+form {
+}
+
+
+input {
+	width: 400px;
+	border: 5px solid black;
+	border-radius: 10px;
+	font-family: 'Permanent Marker', cursive;
+	font-size: 18px;
+
+}
+
+button {
+	width: 125px;
+	height: 50px;
+	border: 5px solid black;
+	font-family: 'Permanent Marker', cursive;
+	font-size: 18px;
+	background-color: transparent;
+	border-radius: 10px;
+	margin-top: 10px;
+	
+}
+
+button:hover {
+	color: red;
+}
+
+
+.container {
+	width: 800px;
+	margin: 15px auto;
+	border: 5px solid black;
+	padding: 15px;
+	border-radius: 10px;
+	list-style: none;
+}
+
+
+.gabbContainer {
+	font-size: 28px;
+
+
+}
+
+.grumb {
+	font-size: 48px;
+	color: red;
 }
